package smartHomeDDD.ddd;

public interface ValueObject {
}
